# biz/handler/bns/supply/yahoo/get_selling_list_service.go
@@ -1,0 +1,17 @@
+package yahoo
+
+import (
+	"context"
+
+	"github.com/buyandship/supply-svr/biz/infrasturcture/yahoo"
+	"github.com/buyandship/supply-svr/biz/model/bns/supply"
+)
+
+func GetSellingListService(ctx context.Context, req *supply.YahooGetSellingListReq) (*yahoo.SellingListResponse, error) {
+	client := yahoo.GetClient()
+	resp, err := client.GetSellingList(ctx, req)
+	if err != nil {
+		return nil, err
+	}
+	return resp, nil
+}
